[package]
name = "modern_appvars"
description="A parser for appvars on TI calculators"
repository="https://github.com/jacks0n9/modern_appvars.git"
version = "0.1.0"
edition = "2021"
authors=["starryuwu"]
license="MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
